grammar.js
    source_file: ($) =>
      seq(
        optional($.script_tag),
        optional($.library_name),
        repeat($.import_or_export),
        repeat($.part_directive),
        repeat($.part_of_directive),
        repeat($._top_level_definition),
      ),

    _top_level_definition: ($) =>
      choice(
        $._declaration,
        seq(optional($._metadata), optional("augment"), $.function_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.getter_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.setter_signature, $.function_body),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.function_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.getter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.setter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          choice("final", "const"),
          optional($._type),
          $.static_final_declaration_list,
          ";",
        ),
        seq(optional($._metadata), optional("augment"), "late", "final", optional($._type), $.initialized_identifier_list, ";"),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("late"),
          $._var_or_type,
          $.initialized_identifier_list,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          "external",
          optional("final"),
          optional($._type),
          $.identifier_list,
          ";",
        ),
      ),

    // ========================================================================
    // Library structure (Phase 9)
    // ========================================================================

    _metadata: ($) => repeat1($._annotation),

    _type: ($) =>
      choice(
        seq($.function_type, optional("?")),
        $._type_not_function,
      ),

    _type_name: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        optional(
          prec.right(PREC.TYPE_IDENTIFIER, seq(".", alias($.identifier, $.type_identifier))),
        ),
      ),

    void_type: (_) => "void",

    true: (_) => "true",
    decimal_integer_literal: (_) =>
      token(sep1(/[0-9]+/, /_+/)),

    string_literal: ($) =>
      repeat1(
        choice(
          $.string_literal_double_quotes,
          $.string_literal_single_quotes,
          $.string_literal_double_quotes_multiple,
          $.string_literal_single_quotes_multiple,
          $.raw_string_literal_double_quotes,
          $.raw_string_literal_single_quotes,
          $.raw_string_literal_double_quotes_multiple,
          $.raw_string_literal_single_quotes_multiple,
        ),
      ),

    string_literal_single_quotes: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $.template_chars_single_single,
            '"',
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        "'",
      ),

    _sub_string_test: (_) => seq("$", /[^a-zA-Z_{]/),

    _element: ($) =>
      choice(
        $._expression,
        $.pair,
        $.spread_element,
        $.null_aware_element,
        $.null_aware_pair,
        $.if_element,
        $.for_element,
      ),

    record_literal: ($) =>
      seq(optional("const"), $._record_literal_no_const),

    _record_literal_no_const: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          choice(
            seq($.label, $._expression, optional(",")),
            seq($._expression, ","),
            seq($.record_field, repeat1(seq(",", $.record_field)), optional(",")),
          ),
          ")",
        ),
      ),

    record_field: ($) => seq(optional($.label), $._expression),

    // ========================================================================
    // Expressions (Phase 4)
    // ========================================================================

    _expression: ($) =>
      choice(
        $.pattern_assignment,
        $.assignment_expression,
        $.throw_expression,
        seq($._real_expression, repeat($.cascade_section)),
      ),

    _real_expression: ($) =>
      choice(
        $.conditional_expression,
        $.logical_or_expression,
        $.if_null_expression,
        $.logical_and_expression,
        $.equality_expression,
        $.relational_expression,
        $.bitwise_or_expression,
        $.bitwise_xor_expression,
        $.bitwise_and_expression,
        $.shift_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.type_cast_expression,
        $.type_test_expression,
        $._unary_expression,
      ),

    // --- Throw ---

    assignable_expression: ($) =>
      choice(
        seq($._primary, $._assignable_selector_part),
        seq("super", $.unconditional_assignable_selector),
        seq($.constructor_invocation, $._assignable_selector_part),
        prec.dynamic(1, $.identifier),
      ),

    _assignable_selector_part: ($) =>
      seq(repeat($.selector), $._assignable_selector),

    // --- Conditional ---

    relational_expression: ($) =>
      prec.left(
        PREC.RELATIONAL,
        choice(
          seq($._real_expression, $.relational_operator, $._real_expression),
          seq("super", $.relational_operator, $._real_expression),
        ),
      ),

    relational_operator: (_) => choice("<", ">", "<=", ">="),

    // --- Type test/cast ---

    postfix_expression: ($) =>
      prec.right(
        choice(
          seq($.assignable_expression, choice("++", "--")),
          seq($.constructor_invocation, repeat($.selector)),
        ),
      ),

    // --- Selectors ---

    _primary: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.function_expression,
        $.new_expression,
        $.const_object_expression,
        $.parenthesized_expression,
        "this",
        seq("super", choice($.unconditional_assignable_selector, $.argument_part)),
        $.constructor_invocation,
        $.constructor_tearoff,
        $.switch_expression,
        $.static_member_shorthand,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    _argument_list: ($) => prec.right(commaSep1TrailingComma($.argument)),

    _formal_parameter_part: ($) =>
      seq(optional($.type_parameters), $.formal_parameter_list),

    formal_parameter_list: ($) =>
      choice(
        seq("(", ")"),
        seq("(", $._normal_formal_parameters, optional(","), ")"),
        seq(
          "(",
          $._normal_formal_parameters,
          ",",
          $.optional_formal_parameters,
          ")",
        ),
        seq("(", $.optional_formal_parameters, ")"),
      ),

    _normal_formal_parameters: ($) => commaSep1($.formal_parameter),

    formal_parameter: ($) => $._normal_formal_parameter,

    _normal_formal_parameter: ($) =>
      seq(
        optional($._metadata),
        choice(
          $._function_formal_parameter,
          $._simple_formal_parameter,
          $.constructor_param,
          $.super_formal_parameter,
        ),
      ),

    _declared_identifier: ($) =>
      seq(
        optional("covariant"),
        $._final_const_var_or_type,
        field("name", $.identifier),
      ),

    constructor_param: ($) =>
      seq(
        optional($._final_const_var_or_type),
        "this",
        ".",
        $.identifier,
        optional($._formal_parameter_part),
      ),

    _statement: ($) =>
      choice(
        $.block,
        prec.dynamic(1, $.local_function_declaration),
        prec.dynamic(2, $.local_variable_declaration),
        $.for_statement,
        $.while_statement,
        $.do_statement,
        $.switch_statement,
        $.if_statement,
        $.try_statement,
        $.break_statement,
        $.continue_statement,
        $.rethrow_statement,
        $.return_statement,
        $.yield_statement,
        $.yield_each_statement,
        $.expression_statement,
        $.assert_statement,
        $.labeled_statement,
        $.empty_statement,
      ),

    empty_statement: (_) => ";",

    block: ($) => seq("{", repeat($._statement), "}"),

    expression_statement: ($) => seq($._expression, ";"),

    local_variable_declaration: ($) =>
      choice(
        seq(
          optional($._metadata),
          $.initialized_variable_definition,
          ";",
        ),
        seq(
          optional($._metadata),
          $.pattern_variable_declaration,
          ";",
        ),
      ),

    initialized_variable_definition: ($) =>
      seq(
        $._declared_identifier,
        optional(seq("=", field("value", $._expression))),
        repeat(seq(",", $.initialized_identifier)),
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          $._expression,
          optional(seq("case", $._guarded_pattern)),
          ")",
          field("consequence", $._statement),
          optional(seq("else", field("alternative", $._statement))),
        ),
      ),

    for_statement: ($) =>
      seq(
        optional("await"),
        "for",
        "(", $._for_loop_parts, ")",
        field("body", $._statement),
      ),

    _for_loop_parts: ($) =>
      choice(
        // for-in loop
        seq(
          optional($._metadata),
          choice($._declared_identifier, $.identifier),
          "in",
          field("value", $._expression),
        ),
        // C-style for loop
        seq(
          optional(
            choice(
              field("init", $.local_variable_declaration),
              seq(commaSep(field("init", $._expression)), ";"),
            ),
          ),
          field("condition", optional($._expression)),
          ";",
          commaSep(field("update", $._expression)),
        ),
        // Pattern for-in loop (Dart 3.0)
        seq(
          choice("final", "var"),
          $._outer_pattern,
          "in",
          field("value", $._expression),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $._statement),
      ),

    do_statement: ($) =>
      seq(
        "do",
        field("body", $._statement),
        "while",
        field("condition", $.parenthesized_expression),
        ";",
      ),

    // --- Switch ---

    switch_statement: ($) =>
      seq(
        "switch",
        field("condition", $.parenthesized_expression),
        field("body", $.switch_block),
      ),

    switch_block: ($) =>
      seq(
        "{",
        repeat($.switch_statement_case),
        optional($.switch_statement_default),
        "}",
      ),

    switch_statement_case: ($) =>
      seq(
        repeat($.label),
        "case",
        $._guarded_pattern,
        ":",
        repeat($._statement),
      ),

    switch_statement_default: ($) =>
      seq(repeat($.label), "default", ":", repeat($._statement)),

    switch_expression: ($) =>
      seq(
        "switch",
        field("condition", $.parenthesized_expression),
        field("body", seq("{", commaSepTrailingComma($.switch_expression_case), "}")),
      ),

    switch_expression_case: ($) =>
      seq($._guarded_pattern, "=>", $._expression),

    // --- Exception handling ---

    try_statement: ($) =>
      seq(
        "try",
        field("body", $.block),
        optional(
          choice(
            $.finally_clause,
            seq(repeat1($._on_part), optional($.finally_clause)),
          ),
        ),
      ),

    _on_part: ($) =>
      choice(
        seq($.catch_clause, $.block),
        seq("on", $._type_not_void, optional($.catch_clause), $.block),
      ),

    catch_clause: ($) =>
      seq("catch", "(", field("exception", $.identifier), optional(seq(",", field("stack_trace", $.identifier))), ")"),

    finally_clause: ($) => seq("finally", $.block),

    // --- Jump statements ---

    break_statement: ($) => seq("break", optional($.identifier), ";"),

    rethrow_statement: (_) => seq("rethrow", ";"),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    assert_statement: ($) => seq($.assertion, ";"),

    assertion: ($) =>
      seq("assert", "(", $._expression, optional(seq(",", $._expression)), optional(","), ")"),

    // ========================================================================
    // Function signatures and bodies (Phase 7)
    // ========================================================================

    function_signature: ($) =>
      seq(
        optional(field("return_type", $._type)),
        field("name", $._function_name),
        field("parameters", $._formal_parameter_part),
      ),

    // All built-in identifiers can be used as function/method names
    _function_name: ($) => $.identifier,

    function_body: ($) =>
      choice(
        seq(optional("async"), "=>", $._expression, ";"),
        seq(optional(choice("async", "async*", "sync*")), $.block),
        $.native,
      ),

    _final_const_var_or_type: ($) =>
      choice(
        seq(optional("late"), "final", optional($._type)),
        seq("const", optional($._type)),
        seq(optional("late"), $._var_or_type),
      ),

    _var_or_type: ($) =>
      choice($._type, seq("var", optional($._type))),

    _final_var_or_type: ($) =>
      choice(
        "var",
        "final",
        seq(optional("final"), $._type),
      ),

    // --- Class members ---

    _external_and_static: ($) => seq($.external, optional("static")),

    // --- Constructors ---

    constructor_signature: ($) =>
      seq(
        field("name", seq($.identifier, optional(seq(".", $._identifier_or_new)))),
        field("parameters", $.formal_parameter_list),
      ),

    initialized_identifier_list: ($) =>
      commaSep1($.initialized_identifier),

    initialized_identifier: ($) =>
      seq(field("name", $.identifier), optional(seq("=", field("value", $._expression)))),

    class_declaration: ($) =>
      choice(
        seq(
          optional($._metadata),
          optional("augment"),
          choice($._class_modifiers, $._mixin_class_modifiers),
          field("name", $.identifier),
          optional(field("type_parameters", $.type_parameters)),
          optional(field("superclass", $.superclass)),
          optional(field("interfaces", $.interfaces)),
          field("body", $.class_body),
        ),
        seq(
          optional($._metadata),
          choice($._class_modifiers, $._mixin_class_modifiers),
          $.mixin_application_class,
        ),
      ),

    _class_modifiers: ($) =>
      seq(
        choice(
          "sealed",
          seq(
            optional("abstract"),
            optional(choice("base", "interface", "final", "inline")),
          ),
        ),
        "class",
      ),

    _mixin_class_modifiers: ($) =>
      seq(optional("abstract"), optional("base"), "mixin", "class"),

    class_body: ($) =>
      seq(
        "{",
        repeat($.class_member),
        "}",
      ),

    class_member: ($) =>
      choice(
        seq(optional($._metadata), optional("augment"), $.declaration, ";"),
        seq(optional($._metadata), optional("augment"), $.method_signature, $.function_body),
      ),

    _guarded_pattern: ($) =>
      seq($._pattern, optional(seq("when", $._expression))),

    _pattern: ($) => $._logical_or_pattern,

    variable_pattern: ($) => seq($._final_var_or_type, field("name", $.identifier)),

    rest_pattern: ($) => seq("...", optional($._pattern)),
